--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "leboncoinpg",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
   "description": "A Strapi application",
+  "license": "MIT",
+  "author": {
+    "name": "A Strapi developer"
+  },
   "scripts": {
+    "build": "strapi build",
     "develop": "strapi develop",
     "start": "strapi start",
-    "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-cloud": "4.24.5",
     "@strapi/plugin-i18n": "4.24.5",
@@ -22,15 +25,12 @@
     "react-router-dom": "5.3.4",
     "styled-components": "5.3.3"
   },
-  "author": {
-    "name": "A Strapi developer"
+  "devDependencies": {},
+  "engines": {
+    "node": "20.0.0",
+    "npm": "8.5.5"
   },
   "strapi": {
     "uuid": "106372e9-dc2f-456d-9817-cf841f568a34"
-  },
-  "engines": {
-    "node": ">=18.0.0 <=20.x.x",
-    "npm": ">=6.0.0"
-  },
-  "license": "MIT"
+  }
 }
